# klaus-code-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  configuration.md  installation.md  mcp.md  roadmap-feature-parity.md  tools.md  usage.md
klaus/: __init__.py  agent.py  cli.py  config.py  context.py  hooks.py  repl.py  sessions.py  streaming.py
klaus/mcp/: __init__.py  client.py
klaus/provider/: anthropic_fmt.py  base.py  openai_fmt.py
klaus/tools/: __init__.py  bash.py  files.py  git.py  image.py  memory.py  search.py  subagent.py  todo.py  web.py  write.py
tests/: conftest.py  test_agent_dispatch.py  test_checkpoints.py  test_config.py  test_context.py  test_hooks.py  test_provider_openai.py  test_sessions.py  test_streaming.py  test_tools_bash.py  test_tools_files.py  test_tools_memory.py  test_tools_todo.py  test_tools_web.py  test_tools_write.py
