[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "klaus-code-cli"
version = "0.1.0"
description = "Klaus Code CLI — agente de codificación agnóstico de proveedor"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rich>=13",
    "typer>=0.12",
    "pydantic>=2",
    "pyyaml>=6",
    "tenacity>=8",
]

[project.scripts]
klaus = "klaus.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["klaus*"]
