[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "klaus-code-cli"
version = "0.1.0"
description = "Klaus Code CLI — agente de codificación agnóstico de proveedor"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rich>=13",
    "typer>=0.12",
    "pydantic>=2",
    "pyyaml>=6",
    "tenacity>=8",
    "mcp>=1.0",
]

[project.scripts]
klaus = "klaus.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["klaus*"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
